# simple-chess-games

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  build-all.sh  build-and-run-tests.sh  build-android.sh  build-linux.sh  build-windows.sh  build.sh  c-build-and-run.sh  compile_commands.json  cpp-build-and-run.sh  test_c_interface.c
.github/workflows/: build-release.yml
cmake/: android-arm64-v8a.cmake  android-armeabi-v7a.cmake  android-x86.cmake  android-x86_64.cmake  windows-cross.cmake
include/: Board.h  Color.h  Exception.h  Exceptions.h  Game.h  GameEngine.h  GameManager.h  GameStage.h  Move.h  Piece.h  PieceMove.h  PlayedMove.h  PossibleMove.h  Square.h
include/c/simplechess/: chess.h  simplechess.h  simplechess_types.h
include/cpp/simplechess/: Board.h  Color.h  Game.h  GameManager.h  GameStage.h  Piece.h  PieceMove.h  PlayedMove.h  SimpleChess.h  Square.h
include/simplechess/: Board.h  Exceptions.h  Game.h  GameManager.h  GameStage.h  Piece.h  PieceMove.h  PlayedMove.h  Square.h
scripts/: copy-dist.sh
src/: .Board.cpp.swp  .BoardAnalyzer.cpp.swp  .BoardImpl.cpp.swp  .Square.cpp.swp  AlgebraicNotationParser.cpp  Board.cpp  Board.h  BoardAnalyzer.cpp  BoardAnalyzer.h  BoardImpl.cpp  BoardImpl.h  Builders.cpp  Builders.h  Color.cpp  Exceptions.cpp  Game.cpp  Game.h  GameEngine.cpp  GameEngineImpl.cpp  GameEngineImpl.h  GameImpl.cpp  GameImpl.h  GameManager.cpp  GameManagerImpl.cpp  GameManagerImpl.h  GameStage.cpp  GameStage.h  LockedGameImpl.cpp  LockedGameImpl.h  MoveHistory.h  MoveMap.h  MoveValidator.cpp  MoveValidator.h  Piece.cpp  Piece.h  PieceImpl.cpp  PieceImpl.h  PieceMove.cpp  PieceMove.h  PlayedMove.cpp  (+3 more)
src/c_interface/: chess_c_impl.cpp  conversion_utils.cpp  conversion_utils.h  simplechess.cpp
src/core/: Board.cpp  Builders.cpp  Builders.h  Color.cpp  Exceptions.cpp  Game.cpp  GameManagerImpl.cpp  GameManagerImpl.h  GameStage.cpp  Piece.cpp  PieceMove.cpp  PlayedMove.cpp  SimpleChess.cpp  Square.cpp
src/core/details/: AlgebraicNotationGenerator.cpp  AlgebraicNotationGenerator.h  BoardAnalyzer.cpp  BoardAnalyzer.h  DrawEvaluator.cpp  DrawEvaluator.h  GameStageUpdater.cpp  GameStageUpdater.h  GameStateDetector.cpp  GameStateDetector.h  MoveValidator.cpp  MoveValidator.h
src/core/details/fen/: FenParser.cpp  FenParser.h  FenUtils.cpp  FenUtils.h
src/core/details/moves/: BishopMove.cpp  BishopMove.h  KingMove.cpp  KingMove.h  KnightMove.cpp  KnightMove.h  PawnMove.cpp  PawnMove.h  QueenMove.cpp  QueenMove.h  RookMove.cpp  RookMove.h
src/cpp_interface/: GameManager.cpp
src/details/: AlgebraicNotationGenerator.cpp  AlgebraicNotationGenerator.h  AlgebraicNotationParser.cpp  AlgebraicNotationParser.h  BoardAnalyzer.cpp  BoardAnalyzer.h  BoardUtils.cpp  BoardUtils.h  DrawEvaluator.cpp  DrawEvaluator.h  GameStageUpdater.cpp  GameStageUpdater.h  GameStateDetector.cpp  GameStateDetector.h  MoveHistory.cpp  MoveMap.cpp  MoveValidator.cpp  MoveValidator.h
src/details/fen/: FenParser.cpp  FenParser.h  FenUtils.cpp  FenUtils.h
src/details/movebehaviour/: MoveBehaviour.cpp  MoveBehaviour.h  MoveBehaviourBishop.cpp  MoveBehaviourBishop.h  MoveBehaviourKnight.cpp  MoveBehaviourQueen.h
src/details/moves/: BishopMove.cpp  BishopMove.h  KingMove.cpp  KingMove.h  KnightMove.cpp  KnightMove.h  PawnMove.cpp  PawnMove.h  QueenMove.cpp  QueenMove.h  RookMove.cpp  RookMove.h
src/movebehaviour/: MoveBehaviour.cpp  MoveBehaviour.h  MoveBehaviourBishop.cpp  MoveBehaviourBishop.h  MoveBehaviourKing.cpp  MoveBehaviourKing.h  MoveBehaviourKnight.cpp  MoveBehaviourKnight.h  MoveBehaviourPawn.cpp  MoveBehaviourPawn.h  MoveBehaviourQueen.cpp  MoveBehaviourQueen.h  MoveBehaviourRook.cpp  MoveBehaviourRook.h
tests/: AlgebraicNotation_test.cpp  DrawDetection_test.cpp  FenGeneration_test.cpp  GameCreation_test.cpp  MoveAvailability_test.cpp  MoveCounter_test.cpp  MovesOnBoard_test.cpp  Resignation_test.cpp  TestUtils.h
tests/c/: AlgebraicNotation_test.cpp  DrawDetection_test.cpp  FenGeneration_test.cpp  GameCreation_test.cpp  MoveAvailability_test.cpp  MoveCounter_test.cpp  MovesOnBoard_test.cpp  Resignation_test.cpp  TestUtils.h
tests/cpp/: AlgebraicNotation_test.cpp  DrawDetection_test.cpp  FenGeneration_test.cpp  GameCreation_test.cpp  MoveAvailability_test.cpp  MoveCounter_test.cpp  MovesOnBoard_test.cpp  Resignation_test.cpp  TestUtils.h
